--- a/src/styles/partials/typography.scss
+++ b/src/styles/partials/typography.scss
@@ -24,7 +24,7 @@ Anchors
 a {
   color: $primaryAnchorColor;
   text-decoration: none;
-  transition: all 0.3s ease-in-out;
+  // transition: all 0.3s ease-in-out;
 }
 
 a:active,
