--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -25,6 +25,10 @@
 /*================ SECTIONS ================*/
 @import url('sections/faq.scss');
 @import url('sections/product.scss');
+@import url('sections/shop.scss');
+@import url('sections/promo-bar.scss');
+@import url('sections/home.scss');
+@import url('sections/contact-form.scss');
 
 /* --------------------------------------------------------------------------
 Section Comment
