--- a/src/templates/page.contact.liquid
+++ b/src/templates/page.contact.liquid
@@ -1,7 +1,14 @@
-<h1>{{ page.title }}</h1>
+<!-- <h1>{{ page.title }}</h1> -->
+{% section 'contact' %}
 
 <div class="rte">
   {{ page.content }}
+</div>
+
+<div>
+  {% if section.settings.contact-image != blank%}
+  <img src={{section.settings.contact-image}} />
+  {% endif %}
 </div>
 
 {% form 'contact' %}
@@ -14,14 +21,14 @@
 
   {{ form.errors | default_errors }}
 
-  <label for="ContactFormName">{{ 'contact.form.name' | t }}</label>
+  <!-- <label for="ContactFormName">{{ 'contact.form.name' | t }}</label> -->
   <input type="text"
     name="contact[name]"
     id="ContactFormName"
     placeholder="{{ 'contact.form.name' | t }}"
     value="{% if form[name] %}{{ form[name] }}{% elsif customer %}{{ customer.name }}{% endif %}">
 
-  <label for="ContactFormEmail">{{ 'contact.form.email' | t }}</label>
+  <!-- <label for="ContactFormEmail">{{ 'contact.form.email' | t }}</label> -->
   <input type="email"
     name="contact[email]"
     id="ContactFormEmail"
@@ -31,7 +38,7 @@
     autocomplete="off"
     autocapitalize="off">
 
-  <label for="ContactFormPhone">{{ 'contact.form.phone' | t }}</label>
+  <!-- <label for="ContactFormPhone">{{ 'contact.form.phone' | t }}</label> -->
   <input type="tel"
     name="contact[phone]"
     id="ContactFormPhone"
@@ -39,7 +46,7 @@
     value="{% if form[phone] %}{{ form.phone }}{% elsif customer %}{{ customer.phone }}{% endif %}"
     pattern="[0-9\-]*">
 
-  <label for="ContactFormMessage">{{ 'contact.form.message' | t }}</label>
+  <!-- <label for="ContactFormMessage">{{ 'contact.form.message' | t }}</label> -->
   <textarea rows="10"
     name="contact[body]"
     id="ContactFormMessage"
