--- a/src/snippets/nav-menu.liquid
+++ b/src/snippets/nav-menu.liquid
@@ -1,39 +1,60 @@
+<script>
+	$(document).ready(function ($) {
+		var url = window.location.href;
+		var activePage = url;
+		$('nav li').each(function () {
+			var linkPage = this.href;
+
+			if (activePage == linkPage) {
+				$(this).closest("li").addClass("current");
+			}
+		});
+	});
+</script>
 <nav role="navigation">
 	<ul>
-		{% for link in linklists[section.settings.main_linklist].links %} {% if
-		link.links != blank %}
-		<li>
-			<a href="{{ link.url }}">{{ link.title | escape }}</a>
-			<ul>
-				{% for childlink in link.links %} {% if childlink.links != blank
-				%}
-				<li>
-					<a href="{{ childlink.url }}">{{
-						childlink.title | escape
-					}}</a>
-					<ul>
-						{% for grandchildlink in childlink.links %}
+		{% for link in linklists[section.settings.main_linklist].links %} {% if link.links != blank %}
+			<li>
+				<a href="{{ link.url }}">
+					{{ link.title | escape }}
+				</a>
+				<ul>
+					{% for childlink in link.links %} {% if childlink.links != blank%}
 						<li>
-							<a href="{{ grandchildlink.url }}">{{
-								grandchildlink.title | escape
-							}}</a>
+							<a href="{{ childlink.url }}">
+								{{childlink.title | escape}}
+							</a>
+							<ul>
+								{% for grandchildlink in childlink.links %}
+								<li>
+									<a href="{{ grandchildlink.url }}">
+										{{grandchildlink.title | escape}}
+									</a>
+								</li>
+								{% endfor %}
+							</ul>
 						</li>
-						{% endfor %}
-					</ul>
-				</li>
-				{% else %}
-				<li>
-					<a href="{{ childlink.url }}">{{
-						childlink.title | escape
-					}}</a>
-				</li>
-				{% endif %} {% endfor %}
-			</ul>
-		</li>
+					{% else %}
+						<li>
+							<a href="{{ childlink.url }}">
+								{{childlink.title | escape}}
+							</a>
+						</li>
+					{% endif %} 
+					{% endfor %}
+				</ul>
+			</li>
 		{% else %}
-		<li>
-			<a href="{{ link.url }}">{{ link.title | escape }}</a>
-		</li>
-		{% endif %} {% endfor %} {%- include 'nav-cart-link' -%}
+			<li id="{{ link.title }}-tab">
+				<a 
+					href="{{ link.url }}"
+					{% if link.title == "Instagram" %} target="_blank"{% endif %}
+				>
+					{{ link.title | escape }}{% if link.title == "Instagram" %}➚{% endif %}
+				</a>
+			</li>
+		{% endif %} 
+		{% endfor %} 
+		{%- include 'nav-cart-link' -%}
 	</ul>
 </nav>
