--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -1,14 +1,17 @@
 /* --------------------------------------------------------------------------
 Footer Navigation Styles
 -----------------------------------------------------------------------------*/
-footer nav {
-	a,
-	a:visited {
-		color: #4c4b4b;
-		margin-left: 18px;
-	}
-	a:hover {
-		color: darken(#4c4b4b, 20%);
+footer {
+	margin-top: 100px;
+	nav {
+		a,
+		a:visited {
+			color: #4c4b4b;
+			margin-left: 18px;
+		}
+		a:hover {
+			color: darken(#4c4b4b, 20%);
+		}
 	}
 }
 
@@ -16,8 +19,8 @@ footer nav {
 LK Site Credit
 -----------------------------------------------------------------------------*/
 .site-credit {
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  display: block;
-  text-align: right;
+	font-size: 1.2rem;
+	text-transform: uppercase;
+	display: block;
+	text-align: right;
 }
