--- a/src/styles/sections/shop.scss
+++ b/src/styles/sections/shop.scss
@@ -9,9 +9,9 @@
 			font-size: 10px;
 		}
 	}
-	a:hover {
+	li:hover {
 		color: darken($primaryAnchorColor, 10%);
-		border-bottom: solid black 2px;
+		border-bottom: solid black 3px;
 	}
 }
 
