--- a/src/sections/collection-list.liquid
+++ b/src/sections/collection-list.liquid
@@ -18,7 +18,9 @@
 
       <p>
         {% if collection == empty %}
-          {{ 'homepage.onboarding.collection_title' | t }}
+            {% comment %}
+            	{{ 'homepage.onboarding.collection_title' | t }}
+            {% endcomment %}
         {% else %}
           {{ collection.title }}
         {% endif %}
