--- a/src/snippets/nav-menu.liquid
+++ b/src/snippets/nav-menu.liquid
@@ -1,11 +1,10 @@
 <script>
 	$(document).ready(function ($) {
-		var url = window.location.href;
-		var activePage = url;
-		$('nav li').each(function () {
-			var linkPage = this.href;
-
-			if (activePage == linkPage) {
+		const url = window.location.href;
+		const activePage = url;
+		$('nav ul li').each(function () {
+			const linkPage = this.firstElementChild.href
+			if (activePage === linkPage) {
 				$(this).closest("li").addClass("current");
 			}
 		});
