--- a/src/snippets/nav-logo.liquid
+++ b/src/snippets/nav-logo.liquid
@@ -2,7 +2,6 @@
 	<a href="/" itemprop="url" class="logo">
 		<svg
 			id="logo"
-			width="100%"
 			height="100%"
 			viewBox="0 0 902 96"
 			fill="none"
@@ -54,14 +53,14 @@
 				d="M719.285 58.5001V75.0001H727.185V78.1001C727.185 81.0001 726.085 82.7001 723.685 83.1001C722.485 83.3001 721.085 83.3001 719.285 83.3001V92.2001C730.185 92.2001 735.385 86.1001 735.485 78.7001L735.785 58.5001H719.285Z"
 				fill="black"
 			/>
-			<path
+			{%- comment -%} <path
 				d="M817.728 37.1001V36.8C827.828 34.9 831.028 28.4 831.028 21.7C831.028 9.70005 821.128 0.800049 802.928 0.800049C783.028 0.800049 772.328 10.4001 770.528 26.8001L784.828 28.6001C785.828 18.6001 790.928 13.4 802.028 13.4C810.728 13.4 815.628 17.5001 815.628 23.9001C815.628 30.2001 810.328 31.7001 802.828 31.7001H793.028V43.9001H804.528C812.828 43.9001 817.928 46.1001 817.928 52.6001C817.928 60.1001 812.928 63.6001 801.928 63.6001C791.428 63.6001 786.228 60.3001 784.328 49.9001L769.428 51.8C771.928 68.7001 782.328 76.2001 801.828 76.2001C820.828 76.2001 833.528 69.3001 833.528 54.2001C833.528 43.9 827.628 38.6001 817.728 37.1001Z"
 				fill="black"
 			/>
 			<path
 				d="M859.21 62.1001C862.81 57.3001 871.51 53.7001 879.51 49.5001C892.01 42.9001 899.71 37 899.71 24.8C899.71 9.30005 887.41 0.800049 871.11 0.800049C851.91 0.800049 840.71 10.1 838.81 31L853.01 32.8001C854.41 18 860.11 13.4 870.31 13.4C878.91 13.4 884.01 17.8001 884.01 25.3001C884.01 33.1001 877.41 36.9001 865.31 43.3001C848.51 52.2001 840.41 58.7001 840.41 70.5001V75.0001H901.01V62.1001H859.21Z"
 				fill="black"
-			/>
+			/> {%- endcomment -%}
 			<g class="right-eye">
 				<circle cx="27%" cy="51%" r="12" fill="black" />
 			</g>
@@ -69,9 +68,24 @@
 				<circle cx="19.6%" cy="51%" r="12" fill="black" />
 			</g>
 		</svg>
+		<span id="age"></span>
 	</a>
 </div>
 <script>
+	$("#age").text(()=>{
+		function getAge(dateString) {
+			var today = new Date();
+			var birthDate = new Date(dateString);
+			var age = today.getFullYear() - birthDate.getFullYear();
+			var m = today.getMonth() - birthDate.getMonth();
+			if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) {
+				age--;
+			}
+			return age;
+		}
+		return getAge("1987-10-31")
+	})
+
 	$("body").mousemove((event) => {
 		const leftEye = $(".left-eye");
 		const rightEye = $(".right-eye");
