--- a/src/styles/partials/cart.scss
+++ b/src/styles/partials/cart.scss
@@ -15,10 +15,11 @@
 	transform: translateX(100%);
 	transition: all 0.3s ease-in-out 0.3s;
 	overflow: scroll;
-	box-shadow: 0 0 50px #00000040;
+	box-shadow: 0 0 60px #00000017;
 	@include mobile-only {
 		width: auto;
 		box-shadow: none;
+		padding: 10px;
 	}
 	a {
 	}
