--- a/src/styles/partials/nav.scss
+++ b/src/styles/partials/nav.scss
@@ -9,21 +9,30 @@ Body Open Mobile Nav Styles
 .logo {
 	width: 100%;
 }
+.instagram {
+	width: 30px;
+	@include mobile-only {
+		width: 20px;
+	}
+}
 /* --------------------------------------------------------------------------
 Header Navigation Styles
 -----------------------------------------------------------------------------*/
 .nav-wrapper {
-	margin-bottom: 50px;
-	@include mobile-only {
-		margin-bottom: 30px;
-	}
+	margin-bottom: 30px;
 	.container {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		@include mobile-only {
+			margin-bottom: 0;
+		}
 		.logo-wrapper {
-			padding: 50px 0;
+			@include mobile-only {
+				padding: 30px 0 0px;
+			}
+			padding: 30px 0 10px;
 			width: 100%;
 			a {
 				font-family: $MGBold;
@@ -50,15 +59,39 @@ Header Navigation Styles
 				width: 100%;
 				ul {
 					display: flex;
-					justify-content: space-between;
+					justify-content: left;
+					margin-top: 10px;
+					@include mobile-only {
+						justify-content: space-between;
+						margin-top: 10px;
+						flex-wrap: wrap;
+						margin-bottom: 10px;
+					}
 					li {
-						// border-bottom: 3px solid rgba(0, 0, 0, 0);
+						margin-right: 20px;
+						@include mobile-only {
+							margin-right: 0;
+						}
 						a {
-							font-size: 30px;
+							font-size: 20px;
 							@include mobile-only {
-								font-size: 18px;
+								font-size: 14px;
 							}
 						}
+						.cart-counter {
+							@include mobile-only {
+								position: fixed;
+								top: 5px;
+								right: 10px;
+								box-shadow: 0 0 0 2px black;
+								padding: 0px 6px;
+								border-radius: 20px;
+								font-size: 10px;
+							}
+						}
+					}
+					li:last-child {
+						margin-right: 0;
 					}
 					li:hover {
 						color: darken($primaryAnchorColor, 20%);
@@ -212,4 +245,27 @@ Hamburger Icon styles
 #logo path,
 #logo circle {
 	transition: fill 100ms;
+}
+
+.logo-wrapper {
+	.logo {
+		@include mobile-only {
+			height: 45px;
+		}
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		position: relative;
+		svg {
+		}
+		#age {
+			position: absolute;
+			right: 0;
+			font-size: 9.5rem;
+			margin-top: -1%;
+			@include mobile-only {
+				font-size: 4.2rem;
+			}
+		}
+	}
 }
