adds readme, product fixes

--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -30,7 +30,7 @@
           {% for image in product.images %}
             {% if image %}
             <li>
-              <a href="{{ image.src | img_url: '480x480' }}" data-product-single-thumbnail>
+              <a href="{{ image.src | img_url: 'master' }}" data-product-single-thumbnail>
                 <img src="{{ image.src | img_url: '160x160' }}" alt="{{ image.alt | escape }}">
               </a>
             </li>
@@ -112,12 +112,15 @@
                   </span>
                 </a>
               {% else %}
+                <script>console.log({{ collection | json }});</script>
+              {% endif %}
+            {% endfor %}
                 <div class="cart">
                   <div 
                     class="quantity"
                     {% unless current_variant.available %}
-						style="color: #c0c0c0"
-					{% endunless %}
+                      style="color: #c0c0c0"
+                    {% endunless %}
                   >
                   </div>
                   <button
@@ -125,19 +128,17 @@
                     name="add"
                     data-add-to-cart
                     {% unless current_variant.available %}
-						disabled="disabled"
-					{% endunless %}>
+                      disabled="disabled"
+                    {% endunless %}>
                     <span data-add-to-cart-text>
                       {% if current_variant.available %}
-                      {{ 'products.product.add_to_cart' | t }}
+                        {{ 'products.product.add_to_cart' | t }}
                       {% else %}
-                      {{ 'products.product.sold_out' | t }}
+                        {{ 'products.product.sold_out' | t }}
                       {% endif %}
                     </span>
                   </button>
                 </div>
-              {% endif %}
-            {% endfor %}
           </div>
         </form>
       </div>
